fixed image flip on mobile

--- a/public/styles/about/style.css
+++ b/public/styles/about/style.css
@@ -100,6 +100,10 @@
     cursor: pointer;
     transform: rotateX(180deg);
 }
+.maincontainer:active > .thecard{
+    cursor: pointer;
+    transform: rotateX(180deg);
+}
 
 .thefront{
     border-radius: 15px;
